<resources>
    <string name="app_name">Taskster</string>
    <string name="enable">Start</string>
    <string name="disable">Stop</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="data">Data</string>
    <string name="music">Music</string>
    <string name="Description">Hello Folks</string>

    <string name="helper_notification_title_template">Helper: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="helper_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat
        velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed
        nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_test">test</string>
    <string name="about">About Us</string>
    <string name="copy_right" />
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="PM">PM</string>
    <string name="AM">AM</string>
    <string name="splashicon">splashicon</string>
    <string name="splash">splash</string>

    <string name="test_notification_title_template">Test: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="test_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at
        ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem,
        ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra
        rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>
    <string name="timepicker">Timepicker</string>
    <string name="lockscreen">lockscreen</string>
    <string name="Allow"><font fgcolor='#FF4CD964'>Allow</font></string> <!--green-->
    <string name="settings"><font fgcolor='#FF4CD964'>settings</font></string> <!--green-->
    <string name="dialog_text">Please Allow permission for Screen lock</string>
    <string name="dialog_tex">As we can detect you may be using MIUI or Xiaomi device
        so to toggle wifi MIUI and Xiaomi device gives special request for wifi.
    \nPlease goto <b>other permission</b> and then click <b>Change WI-FI Connectivity and Allow permission</b>.
        \nPress settings to goto <b>App Settings</b>.
    \nPress Cancel if already Allowed The permission.</string>
    <string name="cancel"><font fgcolor='#FFFF3B30'>cancel</font></string> <!--red-->
    <string name="agree">Agree</string>
    <string name="dialog_title"><font fgcolor='#FF4CD964'>Permission</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
